tests/errors/conditional_return_missing.orus
fn baz(x: bool) -> i32 {
    if x {
        return 1
    }
}

fn main() {}
